--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr,
 acronym, address, big, cite, code, del, dfn, em, img, ins,
 kbd, q, s, samp, small, strike, strong, sub, sup, tt, var,
-b, u, i, $mid, dl, dt, dd, ol, ul, li, fieldset, form, label,
+b, u, i, dl, dt, dd, ol, ul, li, fieldset, form, label,
 legend, table, caption, tbody, tfoot, thead, tr, th, td, article,
 aside, canvas, details, embed, figure, figcaption, footer, header, hgroup,
 menu, .head-wrp, output, ruby, section, summary, time, mark, audio, video {
@@ -2256,7 +2256,7 @@ main footer .copyright_wrp .copy_content p {
 }
 
 .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child h1 {
-  font-size: 6em;
+  font-size: 5rem;
   color: #F73624;
   line-height: 1.5;
   letter-spacing: 1px;
@@ -2264,6 +2264,7 @@ main footer .copyright_wrp .copy_content p {
   font-family: "Arimo";
   font-weight: bold;
   text-shadow: 1px 2px 6px #00000057;
+  text-transform: uppercase;
 }
 
 .Slimming_Wrapper .Slimming-Banner .Banner_Content .Banner_child p {
@@ -2841,6 +2842,102 @@ main footer .copyright_wrp .copy_content p {
 
 .Filler_Wrapper .Main-Filler-content .Filler-Service .Slim_content h2 {
   padding: 0 0 1rem;
+  font-size: 1.5em;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  text-transform: capitalize;
+  font-weight: bold;
+}
+
+.Filler_Wrapper .Main-Filler-content .Filler-Service .Slim_content h2 span {
+  color: #F73624;
+}
+
+.Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 {
+  font-size: 1.5em;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  text-transform: capitalize;
+  font-weight: bold;
+  text-align: center;
+  padding: 0 0 1rem;
+  font-size: 2em;
+}
+
+.Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-heading h2 span {
+  color: #F73624;
+}
+
+.Filler_Wrapper .Main-Filler-content .Benefit_Wrapper .Benefit-content p {
+  padding: 0 0 1.4rem;
+  font-size: 1em;
+  text-transform: capitalize;
+  letter-spacing: 1px;
+  line-height: 1.8;
+  word-spacing: 2px;
+}
+
+.Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 {
+  font-size: 1.5em;
+  line-height: 1.5;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  text-transform: capitalize;
+  font-weight: bold;
+  text-align: center;
+  padding: 0 0 1rem;
+  font-size: 2em;
+}
+
+.Filler_Wrapper .Main-Filler-content .Filler-Treatment .filler-heading h2 span {
+  color: #F73624;
+}
+
+.Filler_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content {
+  width: 100%;
+  text-align: center;
+}
+
+.Filler_Wrapper .Main-Filler-content .Filler-Treatment .Filler-content figure img {
+  max-width: 40%;
+}
+
+.Organic_Wrapper .Organic-Banner {
+  background: url(../image/organic-banner.png) no-repeat !important;
+  background-size: cover !important;
+  background-position: center;
+}
+
+.Organic_Wrapper .Benefit-heading h2 {
+  text-align: left !important;
+}
+
+.Organic_Wrapper .Org_wrp .Organic-Cnt ul {
+  padding: 1.5rem 0;
+}
+
+.Organic_Wrapper .Org_wrp .Organic-Cnt ul li {
+  display: block;
+  padding: 0 0 1rem 2rem;
+  text-transform: capitalize;
+  line-height: 1.7;
+  letter-spacing: 1px;
+  word-spacing: 1px;
+  font-size: 1em;
+  position: relative;
+}
+
+.Organic_Wrapper .Org_wrp .Organic-Cnt ul li::before {
+  content: '';
+  width: 10px;
+  height: 10px;
+  background: #000;
+  border-radius: 50%;
+  position: absolute;
+  top: 9px;
+  left: 4px;
 }
 
 .main-bar {
